--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".VinderActivity" />
-        <activity android:name=".TaberActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name="com.example.galgeleg.view.VinderActivity" />
+        <activity android:name=".view.TaberActivity" />
+        <activity android:name=".view.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
