--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:theme="@style/AppTheme">
         <activity android:name="com.example.galgeleg.view.VinderActivity" />
         <activity android:name=".view.TaberActivity" />
-        <activity android:name=".view.GameActivity">
+        <activity android:name=".view.GameActivity"/>
+        <activity android:name=".view.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
