--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore-ktx:21.7.1'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
+    //LottieFiles implementations
+    implementation 'com.airbnb.android:lottie:3.4.0'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
